AA-004: set CPU core requirements to be 1.0 for auto-scale demo

--- a/.applatix/golang-example.yaml
+++ b/.applatix/golang-example.yaml
@@ -6,7 +6,7 @@ description: golang example base container
 container:
   resources:
     mem_mib: 256
-    cpu_cores: 0.1
+    cpu_cores: 1.0
     disk_gb: 0
   image: "docker.local/golang:1.6"
   docker_options: ""
@@ -26,8 +26,8 @@ outputs:
 ---
 type: service_template
 subtype: workflow
-name: golang-example
-description: golang example workflow
+name: golang-example-high-cpu-request
+description: golang example workflow which has high cpu requirement
 inputs:
   parameters:
     commit:
