--- a/.applatix/golang-example.yaml
+++ b/.applatix/golang-example.yaml
@@ -8,7 +8,7 @@ container:
     mem_mib: 256
     cpu_cores: 0.1
     disk_gb: 0
-  image: "docker.local/golang:1.6"
+  image: "golang:1.6"
   docker_options: ""
   command: "%%CMD%%"
 inputs:
